# holyrail

./: .gitignore  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SPRINTS.md  holyrail.example.toml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: algorithm_quality.md  bug_report.md  feature_request.md  raw_support.md
.github/workflows/: ci.yml
docs/: architecture.md  index.md  raw-validation.md
src/holyrail/: __init__.py  config.py
src/holyrail/analysis/: __init__.py  loader.py  metrics.py  report.py
src/holyrail/cli/: main.py
src/holyrail/curves/: __init__.py  sequence.py
src/holyrail/export/: __init__.py  video.py
src/holyrail/metadata/: __init__.py  extract.py
src/holyrail/models/: __init__.py  project.py
src/holyrail/pipeline/: __init__.py  workflows.py
src/holyrail/plugins/: __init__.py  registry.py
src/holyrail/project/: __init__.py  diagnostics.py  io.py  migrations.py
src/holyrail/rendering/: __init__.py  preview.py  render.py
src/holyrail/ui/: __init__.py
tests/: synthetic_sequences.py  test_analysis_metrics.py  test_analysis_report.py  test_cli.py  test_curves.py  test_metadata_extract.py  test_project_io.py
