[project]
name = "holyrail"
version = "0.1.0"
description = "Open source computational photography platform for RAW timelapse workflows."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "HolyRail contributors" }]
dependencies = [
  "numpy>=2.2",
  "opencv-python>=4.10",
  "pydantic>=2.10",
  "scipy>=1.14",
  "scikit-image>=0.25",
]

[project.optional-dependencies]
raw = ["rawpy>=0.23"]
ui = ["PySide6>=6.8"]
gpu = ["onnxruntime>=1.20"]
dev = [
  "black>=25.1",
  "pytest>=8.3",
  "ruff>=0.8",
]

[project.scripts]
holyrail = "holyrail.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holyrail"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
